# Kivio-modificated

./: README.md  package-lock.json  package.json
src/: App.tsx  Lens.tsx  Settings.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  apple_intelligence.rs  lens.rs  main.rs  native_freeze.rs  prompts.rs  sck.rs  screenshot.rs  settings.rs  state.rs  utils.rs  windows.rs
src/api/: tauri.ts
src/settings/: components.tsx  i18n.ts  providerPresets.ts  utils.ts
src/utils/: clipboard.ts
