# Kivio Rust 后端 Cargo 配置
[package]
name = "kivio"
version = "2.5.1"
description = "Kivio - Screen-level AI assistant for macOS/Windows"
authors = ["ZM"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心及插件
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"
chrono = "0.4"

# HTTP 客户端与异步运行时
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["time"] }

# 工具库
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["png"] }
arboard = "3"
enigo = "0.1.3"
keyring = "3"
md5 = "0.7"
hmac = "0.12"
sha2 = "0.10"

# macOS 平台特有依赖（系统 API 调用）
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
libc = "0.2"
core-graphics = "0.24"
core-foundation = "0.10"
# ScreenCaptureKit 截图：macOS 14+ 走 SCScreenshotManager 取代 `screencapture` CLI
screencapturekit = { version = "1.5", features = ["macos_14_0"] }

# Windows 平台特有依赖（屏幕截图、选中文本捕获）
[target.'cfg(target_os = "windows")'.dependencies]
xcap = "0.8"
windows = { version = "0.61.3", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Threading",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]
